syntax = "proto3";

import "google/api/annotations.proto";

service UserService {
  rpc CreateUser(User) returns (CreateUserResponse) {
    option (google.api.http) = {
                                post: "/api/v1/register"
                                body: "*"
    };
  };
  rpc Login(User) returns (LoginResponse) {
    option (google.api.http) = {
                                post: "/api/v1/login"
                                body: "*"
    };
  };

  rpc GetUsers(Empty) returns (GetUsersResponse) {
    option (google.api.http) = {
                                get: "/api/v1/users"
    };
  };
};

message Empty{}

message User {
  string username = 1;
  string firstname = 2;
  string lastname = 3;
  string email = 4;
  string password = 5;
  string role = 6;
  string verificationid = 7;
  bool verified = 8;
  string uuid = 9;
}

message CreateUserResponse {
  string msg = 1;
}

message LoginResponse {
  string token = 1;
}

message GetUsersResponse {
  repeated User users = 1;
}